Bug 442333 - drkonqi fails to send crash report on neon unstable
Summary: drkonqi fails to send crash report on neon unstable
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-12 11:36 UTC by Patrick Silva
Modified: 2021-09-13 16:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (26.99 KB, image/png)
2021-09-12 11:36 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-09-12 11:36:01 UTC
Created attachment 141486 [details]
screenshot

SUMMARY
Currently I can't send crash reports with drqonqi on neon unstable.
I get the result seen in the attached screenshot after click on "Retry" button.

EXPECTED RESULT
drkonqi should send crash reports

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Harald Sitter 2021-09-13 16:14:11 UTC
Thanks for the report. Crazy issue behind the scenes there :|
Comment 2 Harald Sitter 2021-09-13 16:17:06 UTC
Git commit 2f6a3ad22b092a511377b6ae1cb29535be77bd06 by Harald Sitter.
Committed on 13/09/2021 at 16:16.
Pushed by sitter into branch 'master'.

repair the distro selection

this actually broke before 5.21 even but nobody would ever notice
because in absence of a value we had internal fallbacks in place to
ensure a platform is selected. what apparently happend was that until
the recent paging refactor the distro combobox was always hidden by the
time abouttohide ran and so the entire code path was effectively skipped
meaning the distro selection as a whole was kaput (I've reproduced as
much). with the recent refactor the code path became working again and
fell into a trap that had been there for a while:

we actually place the field values in the combobox as text not data, so
what would happen here is that we'd get an invalid qvariant for data,
resulting in an empty string, resulting in an invalid bug POST to the
API, resulting in the API rejecting the submission.

simply use the text instead.
side effect of this fix is that distro selection works again :shrug:

an argument might be made that this combobox as a whole is fairly
useless. if we add a new product to bugzilla we should also add it to
drkonqi and if we didn't then the combobox won't help anyway as the
majority of reporters surely won't pay attention or can't be bothered to
find the right platform in this huge list of stuff

(make the line const correct while at it)

M  +1    -1    src/bugzillaintegration/reportassistantpages_bugzilla.cpp

https://invent.kde.org/plasma/drkonqi/commit/2f6a3ad22b092a511377b6ae1cb29535be77bd06